# a-maze-ing

./: .gitignore  1  2  README.md  a-maze-ing.py  config.txt  config_parser.py  example.py  main.py  makefile  maze.txt  maze_generator.py  mazegen-1.0.0-py3-none-any.whl  output.txt  output_validator.py  pyproject.toml  stracture.md  subject.md  test_suite.py  todo.todo
Classes/: AnssiColors.py  Cell.py  Point.py  __init__.py
MLX/: example.py  libmlx.py
asciify/: AsciiMaze.py  Maze.py  README.md  __init__.py  display.py  loop.sh  main.py  maze1.txt  maze_example.txt  newfile.c  palette.py  sohaib_maze.txt
asciify/Assets/: logo.txt
asciify/palettes/: blue.toml  dark.toml  green.toml  light.toml  orange.toml  red.toml
common/: __init__.py  enums.py  exceptions.py
helper/: __init__.py  cell.py
maze/: __init__.py  cell.py  display_grids.py  generator.py  maze_test.py  maze_visualization.txt  output_maze.txt
mazegen/: AsciiMaze.py  DataClasses.py  MazeConfig.py  MazeGenerator.py  MazeVisualizor.py  __init__.py  generator.py
mazegen/palettes/: blue.toml  brown.toml  default.toml  green.toml  orange.toml  purple.toml  red.toml
parsing/: MazeConfig.py  __init__.py
